INCLUDE(${SWIG_USE_FILE})

SET_SOURCE_FILES_PROPERTIES(cdmath.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(cdmath.i PROPERTIES C OFF)
SET_SOURCE_FILES_PROPERTIES(cdmath.i PROPERTIES SWIG_DEFINITIONS "-shadow")

INCLUDE_DIRECTORIES(
  ${PYTHON_INCLUDE_DIRS}
  ${HDF5_INCLUDE_DIRS}
  ${MED3_INCLUDE_DIRS}
  ${MED_COUPLING_DIR}
  ${MED_COUPLING_SWIG_DIR}
  ${BASE_DIR}/inc
  ${MESH_DIR}/inc
  ${INTERP_KERNEL_DIR}
  ${INTERP_KERNEL_DIR}/Bases
  ${INTERP_KERNEL_DIR}/Geometric2D
  ${INTERP_KERNEL_DIR}/ExprEval
  ${INTERP_KERNEL_DIR}/GaussPoints
  ${MED_LOADER_DIR}
  ${AMR_DIR}/inc
)


SWIG_ADD_MODULE(cdmath python cdmath.i)
SWIG_LINK_LIBRARIES(cdmath ${PYTHON_LIBS} base mesh amr medcoupling ${HDF5_LIBS} ${MED3_LIBS} medloader)

INSTALL(TARGETS _cdmath DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/cdmath)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/cdmath.py DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/cdmath)
