CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(COMMON_SUBDIRS INTERP_KERNEL MEDCoupling HDF5 MEDFile MEDLoader)

SET(SUBDIRS ${COMMON_SUBDIRS})

IF (CMAKE_CDMATH_SWIG)
SET(SUBDIRS ${SUBDIRS} MEDCoupling_Swig)
ENDIF (CMAKE_CDMATH_SWIG)

FOREACH(DIR ${SUBDIRS})
  ADD_SUBDIRECTORY(${DIR})
ENDFOREACH(DIR ${SUBDIRS})
