CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(COMMON_SUBDIRS MEDFile INTERP_KERNEL MEDCoupling MEDLoader)

SET(SUBDIRS ${COMMON_SUBDIRS})

SET(SALOME_INSTALL_LIBS                ${CMAKE_INSTALL_PREFIX}/lib)
SET(SALOME_INSTALL_HEADERS             ${CMAKE_INSTALL_PREFIX}/include)
SET(SALOME_INSTALL_PYTHON              ${CMAKE_INSTALL_PREFIX}/lib/cdmath)
SET(SALOME_INSTALL_SCRIPT_PYTHON       bin/cdmath)
SET(SALOME_INSTALL_BINS                bin/cdmath)
SET(SALOME_INSTALL_SCRIPT_SCRIPTS      bin/cdmath)
SET(SWIG_EXTRA_FLAGS_FOR_NUMPYANDSCIPY "-DWITH_NUMPY")



IF (CMAKE_CDMATH_SWIG)
SET(SUBDIRS ${SUBDIRS} MEDCoupling_Swig)
SET(SALOME_MED_ENABLE_PYTHON ON)
ENDIF (CMAKE_CDMATH_SWIG)

FOREACH(DIR ${SUBDIRS})
  ADD_SUBDIRECTORY(${DIR})
ENDFOREACH(DIR ${SUBDIRS})
