INCLUDE(${SWIG_USE_FILE})

SET(_extra_lib_SWIG)
if (CDMATH_WITH_PETSC)
    INCLUDE_DIRECTORIES(
      ${PETSC_INCLUDES}
      ${LINEARSOLVER_DIR}/inc
    )
    SET(_extra_lib_SWIG linearsolver ${PETSC_LIBRARIES})
    file(COPY cdmath_with_petsc.i DESTINATION ${CMAKE_BINARY_DIR}/swig)
    file(RENAME ${CMAKE_BINARY_DIR}/swig/cdmath_with_petsc.i ${CMAKE_BINARY_DIR}/swig/cdmath.i)
else (CDMATH_WITH_PETSC)
    file(COPY cdmath_without_petsc.i DESTINATION ${CMAKE_BINARY_DIR}/swig)
    file(RENAME ${CMAKE_BINARY_DIR}/swig/cdmath_without_petsc.i ${CMAKE_BINARY_DIR}/swig/cdmath.i)
endif (CDMATH_WITH_PETSC)

SET_SOURCE_FILES_PROPERTIES(${CMAKE_BINARY_DIR}/swig/cdmath.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${CMAKE_BINARY_DIR}/swig/cdmath.i PROPERTIES C OFF)
SET_SOURCE_FILES_PROPERTIES(${CMAKE_BINARY_DIR}/swig/cdmath.i PROPERTIES SWIG_DEFINITIONS "-shadow")

INCLUDE_DIRECTORIES(
  ${PYTHON_INCLUDE_DIRS}
  ${HDF5_INCLUDE_DIRS}
  ${MED3_INCLUDE_DIRS}
  ${MED_COUPLING_DIR}
  ${MED_COUPLING_SWIG_DIR}
  ${BASE_DIR}/inc
  ${MESH_DIR}/inc
  ${INTERP_KERNEL_DIR}
  ${INTERP_KERNEL_DIR}/Bases
  ${INTERP_KERNEL_DIR}/Geometric2D
  ${INTERP_KERNEL_DIR}/ExprEval
  ${INTERP_KERNEL_DIR}/GaussPoints
  ${MED_LOADER_DIR}
)

SWIG_ADD_MODULE(cdmath python ${CMAKE_BINARY_DIR}/swig/cdmath.i)
SWIG_LINK_LIBRARIES(cdmath ${PYTHON_LIBS} base mesh medcoupling ${MED3_LIBS} medloader ${_extra_lib_SWIG})

INSTALL(TARGETS _cdmath DESTINATION lib/cdmath)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/cdmath.py DESTINATION bin/cdmath)
