# nom du projet tests
PROJECT(tests)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(cdmath)
IF (CMAKE_CDMATH_SWIG)
ADD_SUBDIRECTORY(cdmath_swig)
ENDIF (CMAKE_CDMATH_SWIG)

INCLUDE_DIRECTORIES(
  ${BASE_DIR}/inc 
  ${MESH_DIR}/inc 
  ${LINEARSOLVER_DIR}/inc
  ${MED_COUPLING_DIR}
  ${PRE_REQUIS_DIR}/INTERP_KERNEL
  ${PRE_REQUIS_DIR}/INTERP_KERNEL/Bases
  ${PETSC_INCLUDES} 
  cdmath 
  )

SET(MAIN_SOURCES
  MainTests.cxx
  )

ADD_EXECUTABLE(TestCDMATH ${MAIN_SOURCES})
SET_TARGET_PROPERTIES(TestCDMATH PROPERTIES COMPILE_FLAGS "")
TARGET_LINK_LIBRARIES(TestCDMATH TestMesh base mesh linearsolver medcoupling ${HDF5_LIBRARIES} ${MED3_LIBS} medloader ${CPPUNIT_LIBS} ${PETSC_LIBRARIES})
ADD_TEST(TestCDMATH TestCDMATH)
INSTALL(TARGETS TestCDMATH DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/tests)
