# nom du projet tests
PROJECT(tests)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(cdmath)
IF (CMAKE_CDMATH_SWIG)
    ADD_SUBDIRECTORY(swig)
ENDIF (CMAKE_CDMATH_SWIG)

INCLUDE_DIRECTORIES(
  ${BASE_DIR}/inc 
  ${MESH_DIR}/inc
  ${MED_COUPLING_DIR}
  ${PRE_REQUIS_DIR}/INTERP_KERNEL
  ${PRE_REQUIS_DIR}/INTERP_KERNEL/Bases 
  cdmath 
  )

SET(_extra_lib_TESTS)
if (CDMATH_WITH_PETSC)
    INCLUDE_DIRECTORIES(
      ${LINEARSOLVER_DIR}/inc
      ${PETSC_INCLUDES} 
      )
    SET(_extra_lib_TESTS linearsolver ${PETSC_LIBRARIES})
endif (CDMATH_WITH_PETSC)

SET(MAIN_SOURCES
  MainTests.cxx
  )

ADD_EXECUTABLE(TestCDMATH ${MAIN_SOURCES})
SET_TARGET_PROPERTIES(TestCDMATH PROPERTIES COMPILE_FLAGS "")
TARGET_LINK_LIBRARIES(TestCDMATH TestMesh base mesh medcoupling ${HDF5_LIBRARIES} ${MED3_LIBS} medloader ${CPPUNIT_LIBS} ${_extra_lib_TESTS})

ADD_TEST(TestCDMATH TestCDMATH)
INSTALL(TARGETS TestCDMATH DESTINATION bin/tests)
