INCLUDE_DIRECTORIES(
${HDF5_INCLUDE_DIRS}
${MED3_INCLUDE_DIRS}
${BASE_DIR}/inc 
${MESH_DIR}/inc 
${AMR_DIR}/inc 
${MED_COUPLING_DIR}
${INTERP_KERNEL_DIR}
${INTERP_KERNEL_DIR}/Bases
${INTERP_KERNEL_DIR}/Geometric2D
${INTERP_KERNEL_DIR}/ExprEval
${INTERP_KERNEL_DIR}/GaussPoints
${MED_LOADER_DIR}
)

FILE(GLOB src_amr_CXX . *.cxx)
ADD_LIBRARY(amr SHARED ${src_amr_CXX})
TARGET_LINK_LIBRARIES(amr base mesh medcoupling ${HDF5_LIBS} ${MED3_LIBS} medloader)

INSTALL(TARGETS amr DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
