INCLUDE_DIRECTORIES(
${HDF5_INCLUDE_DIRS}
${MED3_INCLUDE_DIRS}
${MESH_DIR}/inc 
${BASE_DIR}/inc 
${MED_COUPLING_DIR}
${INTERP_KERNEL_DIR}
${INTERP_KERNEL_DIR}/Bases
${INTERP_KERNEL_DIR}/Geometric2D
${INTERP_KERNEL_DIR}/ExprEval
${INTERP_KERNEL_DIR}/GaussPoints
${MED_LOADER_DIR}
)

FILE(GLOB src_mesh_CXX . *.cxx)
ADD_LIBRARY(mesh SHARED ${src_mesh_CXX})
TARGET_LINK_LIBRARIES(mesh base medcoupling medloader ${MED3_LIBS} )

INSTALL(TARGETS mesh DESTINATION lib)
#INSTALL(TARGETS meshStatic DESTINATION lib)
