project(hdf) 
cmake_minimum_required(VERSION 2.8)

INCLUDE(ExternalProject)


SET (HDF_URL                ${CMAKE_CURRENT_SOURCE_DIR}/hdf5-1.8.10-patch1 )
SET (HDF_CONFIGURE_COMMAND  /usr/bin/cmake -DBUILD_SHARED_LIBS=ON ${HDF_INSTALL_DIR} -DCMAKE_INSTALL_PREFIX=${HDF_INSTALL_DIR} . > config.log 2>&1)
SET (HDF_BUILD_COMMAND      make > make.log 2>&1 )
SET (HDF_INSTALL_COMMAND    make install > make_install.log 2>&1)

ExternalProject_Add (project_HDF
URL               ${HDF_URL}     
BUILD_IN_SOURCE   TRUE
CONFIGURE_COMMAND ${HDF_CONFIGURE_COMMAND}
BUILD_COMMAND     ${HDF_BUILD_COMMAND}
INSTALL_COMMAND   ${HDF_INSTALL_COMMAND}
)

INSTALL(DIRECTORY ${HDF_INSTALL_DIR}/lib DESTINATION  ${CMAKE_INSTALL_PREFIX})
INSTALL(DIRECTORY ${HDF_INSTALL_DIR}/include DESTINATION  ${CMAKE_INSTALL_PREFIX})




