
SET(TestMesh_SOURCES
  MeshTests.py
  )

SET(MAILLAGE_MED
  maillage.med
  )

file(COPY ${MAILLAGE_MED} DESTINATION ${CMAKE_BINARY_DIR}/tests/cdmath_swig) 
ADD_TEST(TestSwig ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/MeshTests.py)
SET(CMAKE_LIBRARY_PATH  ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(FILES maillage.med DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/tests)
INSTALL(FILES MeshTests.py DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/tests)


