
SET(TestMesh_SOURCES
  MeshTests.py
  )

SET(MAILLAGE_MED
  maillage.med
  )

file(COPY ${MAILLAGE_MED} DESTINATION ${CMAKE_BINARY_DIR}/tests/cdmath_swig) 
ADD_TEST(TestSwig ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/MeshTests.py)

SET_PROPERTY(TEST TestSwig PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/lib:$ENV{LD_LIBRARY_PATH}")

SET_PROPERTY(TEST TestSwig APPEND PROPERTY ENVIRONMENT "PYTHONPATH=${CMAKE_INSTALL_PREFIX}/lib/cdmath:${CMAKE_INSTALL_PREFIX}/bin/cdmath")


INSTALL(FILES maillage.med DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/tests)
INSTALL(FILES MeshTests.py DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/tests)


